--- a/app/views/users/festivals/top.html.erb
+++ b/app/views/users/festivals/top.html.erb
@@ -1,2 +1,3 @@
 <h1>Users::Festivals#top</h1>
 <p>Find me in app/views/users/festivals/top.html.erb</p>
+<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
