--- a/app/views/admins/admins/top.html.erb
+++ b/app/views/admins/admins/top.html.erb
@@ -1,2 +1,3 @@
 <h1>Admins::Admins#top</h1>
 <p>Find me in app/views/admins/admins/top.html.erb</p>
+<%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
