Add header for user&admin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,16 @@
   </head>
 
   <body>
+        <!--URLの先頭に'admin'があれば'true'-->
+    <% if request.fullpath.match?(/^\/admins\/*/) %>
+      <%= render "/layouts/admins_header" %>
+    <% else %>
+      <%= render "/layouts/users_header" %>
+    <% end %>
+
     <% flash.each do |message_type, message| %>
       <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
        <!-- 上記と同義 <div class="alert alert-<%= message_type %>"><%= message %></div> -->
-    <% end %>
-    <% if user_signed_in? %>
-      <%= link_to "マイページ", users_user_path(current_user) %>
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "ログイン", new_user_session_path %>
-      <%= link_to "新規登録", new_user_registration_path %>
-      <%= link_to "管理者ログイン", new_admin_session_path %>
     <% end %>
     <%= yield %>
   </body>
