--- a/app/views/admins/users/show.html.erb
+++ b/app/views/admins/users/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Admins::Users#show</h1>
-<p>Find me in app/views/admins/users/show.html.erb</p>
+<h1>ユーザ詳細ページ</h1>
+"ID"<%= @user.id %>
+"姓"<%= @user.last_name %>
+"名"<%= @user.first_name %>
+"ステータス"<%= @user.status %>
+"メアド"<%= @user.email %>
+
+<%= link_to "退会", admins_user_quit_path(@user), method: :patch, data: {confirm: "このユーザを強制的に退会させますか？"} %>
