--- a/app/views/users/festivals/index.html.erb
+++ b/app/views/users/festivals/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Users::Festivals#index</h1>
-<p>Find me in app/views/users/festivals/index.html.erb</p>
+<h1>祭り検索結果</h1>
 
 <table class="table table-hover">
 	<thead>
@@ -19,7 +18,7 @@
 	<tbody>
         <% @festivals.each do |festival|%>
         <tr>
-			<td><%= festival.name %></td>
+			<td><a href="/users/festivals/<%= festival.id%>"><%= festival.name %></td>
 			<td><%= festival.detail %></td>
 			<td><%= festival.location %></td>
 			<td><%= festival.start_date %></td>
@@ -29,6 +28,8 @@
 			<td><%= festival.value_3 %></td>
 			<td><%= festival.value_4 %></td>
 			<td><%= festival.value_5 %></td>
+			<td><%= festival.prefecture.name %></td>
+			<td><%= festival.category.name %></td>
 		</tr>
 		<% end %>
 	</tbody>
