Add seach_bar to users/festivals#top, show

--- a/app/views/users/festivals/index.html.erb
+++ b/app/views/users/festivals/index.html.erb
@@ -1,13 +1,6 @@
 <h1>祭り検索結果</h1>
 
-<%= form_tag(users_festivals_path, :method => 'get') do %>
-	<!--options_from_collection_for_select
-		第１引数は表示させるデータ、第２引数は格納される値、第３引数はViewに表示される値-->
-	<%= date_field_tag 'start_date', include_blank: "開催日", class:"btn btn-default dropdown-toggle"%>
-    <%= select_tag 'prefecture_id', options_from_collection_for_select( Prefecture.all, :id, :name), include_blank: "都道府県", class:"btn btn-default dropdown-toggle" %>
-    <%= select_tag 'category_id', options_from_collection_for_select( Category.all, :id, :name), include_blank: "カテゴリー", class:"btn btn-default dropdown-toggle" %>
-    <%= submit_tag 'Search', :name => nil %>
-<% end %>
+<%= render 'search_form' %>
 
 
 <table class="table table-hover">
