Update users/festivals#show with image_tag instead of Refile

--- a/app/views/users/festivals/about.html.erb
+++ b/app/views/users/festivals/about.html.erb
@@ -12,8 +12,7 @@ FesTiboは、祭りをもとにホテルを探せる検索サイトです。<br>
 <br>
 日本各地に素晴らしいお祭りがあります。<br>
 しかしいざ調べるとなると祭り情報サイトやホテルサイトや地図など、<br>
-様々なものを同時に使わなければならず、なかなか足を運べません。<br>
-わかります、その気持ち。<br>
+様々なものを同時に使わなければならず、なかなか足を運べませんよね。<br>
 <br>
 FesTiboはそのような煩わしさからあなたを解放し、<br>
 あなたしか見たことない日本を探すお手伝をします。<br>
@@ -24,5 +23,6 @@ FesTiboはそのような煩わしさからあなたを解放し、<br>
 当サイトの由来であるFestivoは「祭り」や「祭日」という意味があります。<br>
 <br>
 さあ、あなただけの日本を探しに行きませんか？<br>
-
+何つってね、後でまた編集<br>
+<br>
 <%= link_to "TOPに戻る", root_path %>
