Add admins/festivals#show, #destroy

--- a/app/views/admins/festivals/show.html.erb
+++ b/app/views/admins/festivals/show.html.erb
@@ -1,2 +1,47 @@
-<h1>Admins::Festivals#show</h1>
-<p>Find me in app/views/admins/festivals/show.html.erb</p>
+<h1>Admins::Festivals#show<%= @festival.name %></h1>
+<%= link_to "編集", edit_admins_festival_path(@festival) %>
+<%= link_to "削除", admins_festival_path(@festival), method: :delete, data: {confirm: "この祭りを削除しますか？"}  %>
+<%= render 'search_form' %>
+<table class="table table-hover">
+	<thead>
+		<tr>
+            <th>祭り名</th>
+			<th>祭り説明</th>
+			<th>祭り開催地</th>
+			<th>開催初日</th>
+			<th>開催終了日</th>
+			<th>value1</th>
+			<th>value2</th>
+			<th>value3</th>
+			<th>value4</th>
+			<th>value5</th>
+			<th>都道府県</th>
+			<th>カテゴリー</th>
+		</tr>
+	</thead>
+	<tbody>
+        <tr>
+			<td><%= @festival.name %></td>
+			<td><%= @festival.detail %></td>
+			<td><%= @festival.location %></td>
+			<td><%= @festival.start_date %></td>
+			<td><%= @festival.end_date %></td>
+			<td><%= @festival.value_1 %></td>
+			<td><%= @festival.value_2 %></td>
+			<td><%= @festival.value_3 %></td>
+			<td><%= @festival.value_4 %></td>
+			<td><%= @festival.value_5 %></td>
+			<td><%= @festival.prefecture.name %></td>
+			<td>
+				<% @festival.festivals_categories.each do |festivals_category| %>
+				<%= festivals_category.category.name %>
+				<% end %>
+			</td>
+		</tr>
+		<tr>
+			<% @festival.festival_photos.each do |festival_photo|%>
+			<td><%= image_tag festival_photo.image_id, style: "width: 100px; height: 100px;" %></td>
+			<% end %>
+		</tr>
+	</tbody>
+</table>
