--- a/app/views/users/festivals/index.html.erb
+++ b/app/views/users/festivals/index.html.erb
@@ -17,8 +17,8 @@
 			<th>value4</th>
 			<th>value5</th>
 			<th>都道府県</th>
-			<th>カテゴリー</th>
     		<th>画像数</th>
+ 			<th>カテゴリー</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -35,8 +35,12 @@
 			<td><%= festival.value_4 %></td>
 			<td><%= festival.value_5 %></td>
 			<td><%= festival.prefecture.name %></td>
-			<td><%= festival.category.name %></td>
 			<td><%= festival.festival_photos.count %></td>
+            <td>
+				<% festival.festivals_categories.each do |festivals_category| %>
+				<%= festivals_category.category.name %>
+				<% end %>
+			</td>
 		</tr>
 		<% end %>
 	</tbody>
