--- a/app/views/admins/festivals/new.html.erb
+++ b/app/views/admins/festivals/new.html.erb
@@ -1,2 +1,32 @@
-<h1>Admins::Festivals#new</h1>
-<p>Find me in app/views/admins/festivals/new.html.erb</p>
+<h1>祭り新規登録</h1>
+
+<%= form_for(@festival, url: admins_festivals_path) do |f| %>
+    <%= f.label :name, "祭り名" %>
+    <%= f.text_field :name, autofocus: true, placeholder: "祭り名" %>
+    <%= f.label :prefecture_id, "都道府県" %>
+    <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, include_blank: "都道府県", class:"btn btn-default dropdown-toggle" %>
+    <%= f.label :start_date, "開催期間" %>
+    <%= f.date_field :start_date %> ~ 
+    <% f.label :end_date %>
+    <%= f.date_field :end_date %>
+
+
+    <br>
+
+
+    <%= f.label :detail, "説明" %>
+    <%= f.text_area :detail, placeholder: "祭り説明" %>
+    <%= f.label :location, "会場住所" %>
+    <%= f.text_field :location, placeholder: "都道府県から入力" %>
+
+    <br>
+
+
+　　　<%= f.select :value_1, Festival.value_1s.keys, include_blank: "規模", class:"btn btn-default dropdown-toggle" %>
+
+    <br>
+
+    <%= f.submit "新規登録" %>
+    <%= link_to "内容を破棄", admins_festivals_path %>
+
+<% end %>
