--- a/app/views/admins/festivals/index.html.erb
+++ b/app/views/admins/festivals/index.html.erb
@@ -3,7 +3,7 @@
 
 <%= render 'search_form' %>
 
-<%= link_to "祭りを新規登録", new_admins_festival_path %>
+<%= link_to "新規登録", new_admins_festival_path %>
 
 <table class="table table-hover">
 	<thead>
