--- a/app/views/admins/festivals/new.html.erb
+++ b/app/views/admins/festivals/new.html.erb
@@ -9,10 +9,19 @@
     <%= f.date_field :start_date %> ~ 
     <% f.label :end_date %>
     <%= f.date_field :end_date %>
-
-
     <br>
 
+
+    <!--下記カテゴリー-->
+    <%= f.label :festivals_categories, "カテゴリー" %>
+    <%= f.fields_for :festivals_categories do |festivals_category| %>
+        <%= festivals_category.collection_select :category_id, Category.all, :id, :name, include_blank: "カテゴリーを選択", class:"btn btn-default dropdown-toggle" %>
+        <%= festivals_category.text_field :category_id, placeholder: "新しいカテゴリー" %>
+        <%= festivals_category.check_box :_destroy %>
+    <% end %>
+    <br>
+
+    <!--以上、カテゴリー-->
 
     <%= f.label :detail, "説明" %>
     <%= f.text_area :detail, placeholder: "祭り説明" %>
@@ -21,9 +30,11 @@
 
     <br>
 
-
-　　　<%= f.select :value_1, Festival.value_1s.keys, include_blank: "規模", class:"btn btn-default dropdown-toggle" %>
-
+    <%= f.select :value_1, Festival.value_1s.keys, include_blank: "【規模】", class:"btn btn-default dropdown-toggle" %>
+    <%= f.select :value_2, Festival.value_2s.keys, include_blank: "【歴史】", class:"btn btn-default dropdown-toggle" %>
+    <%= f.select :value_3, Festival.value_3s.keys, include_blank: "【全国/地元】", class:"btn btn-default dropdown-toggle" %>
+    <%= f.select :value_4, Festival.value_4s.keys, include_blank: "【王道/奇祭】", class:"btn btn-default dropdown-toggle" %>
+    <%= f.select :value_5, Festival.value_5s.keys, include_blank: "【子供/大人向け】", class:"btn btn-default dropdown-toggle" %>
     <br>
 
     <%= f.submit "新規登録" %>
