--- a/app/views/admins/festivals/_search_form.html.erb
+++ b/app/views/admins/festivals/_search_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag(admins_festivals_path, :method => 'get') do %>
-    <%= text_field_tag :search %>
+    <%= text_field_tag :search, "", placeholder: "祭り名で検索" %>
 	<!--options_from_collection_for_select
 		第１引数は表示させるデータ、第２引数は格納される値、第３引数はViewに表示される値-->
 	<%= date_field_tag 'start_date', include_blank: "開催日", class:"btn btn-default dropdown-toggle"%>
