--- a/app/views/admins/hotels/index.html.erb
+++ b/app/views/admins/hotels/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Admins::Hotels#index</h1>
-<p>Find me in app/views/admins/hotels/index.html.erb</p>
+<!--管理者ホテル一覧-->
+<h1>ホテル一覧</h1>
+
+<%= render 'search_form' %>
+
+<%= link_to "新規登録", new_admins_hotel_path %>
+
+<table class="table table-hover">
+	<thead>
+		<tr>
+            <th>ID</th>
+            <th>ホテル名</th>
+			<th>ホテル住所</th>
+			<th>ホテル画像数</th>
+    		<th>ホテル部屋タイプ数</th>
+		</tr>
+	</thead>
+	<tbody>
+        <% @hotels.each do |hotel|%>
+        <tr>
+        	<th><%= hotel.id %></th>
+			<td><a href="/admins/hotels/<%= hotel.id%>"><%= hotel.name %></td>
+			<td><%= hotel.location %></td>
+			<td><%= hotel.hotel_photos.count %></td>
+			<td><%= hotel.room_types.count %></td>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
