--- a/app/views/admins/hotels/show.html.erb
+++ b/app/views/admins/hotels/show.html.erb
@@ -20,12 +20,24 @@
 			<td><%= attachment_image_tag hotel_photo, :image, style: "width: 100px; height: 100px;" %></td>
 			<% end %>
 		</tr>
-
-		<% @hotel.room_types.each do |room_type| %>
+	</tbody>
+</table>
+<table class="table table-hover">
+	<thead>
 		<tr>
+			<th>部屋タイプ</th>
+			<th>人数</th>
+			<th>部屋数</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @hotel.room_types.each do |room_type| %>
+        <tr>
 			<td><%= room_type.name %></td>
 			<td><%= room_type.people_count %></td>
-		</tr>
+			<td><%= room_type.plans.count %></td>
+			<td><%= room_type.rooms.count %></td>
+　　　　　</tr>
 		<% end %>
 	</tbody>
 </table>
