--- a/app/views/admins/hotels/_room_fields.html.erb
+++ b/app/views/admins/hotels/_room_fields.html.erb
@@ -1,3 +1,6 @@
  <div class='nested-fields'>
-   <%= number_field_tag :room_count, "", placeholder: "部屋数" %>
+   <%= f.text_field :name, placeholder: "部屋番号もしくは部屋名" %>
+       <div class="links">
+           <%= link_to_remove_association "部屋を削除", f, class:"btn btn-danger" %>
+        </div>
  </div>
