--- a/app/views/admins/hotels/show.html.erb
+++ b/app/views/admins/hotels/show.html.erb
@@ -48,3 +48,25 @@
 		<% end %>
 	</tbody>
 </table>
+
+<!--下記、とりあえずGoogle Mapは表示できた、次は住所に応じて自動で表示されるようにしたい-->
+<h2>gmap</h2>
+<style>
+#map{
+  height: 400px;
+  width: 400px;
+}
+</style>
+
+    <div id="map"></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdT-i7-Yek3YigRSLkx62r8zkcRR71MFs&callback=initMap"
+    async defer></script>
