Update Google API to admins/hotels#show

--- a/app/views/admins/hotels/edit.html.erb
+++ b/app/views/admins/hotels/edit.html.erb
@@ -13,8 +13,8 @@
     <div>
     <%= f.label :name, "ホテル名" %>
     <%= f.text_field :name, autofocus: true, placeholder: "ホテル名" %>
-    <%= f.label :location, "住所" %>
-    <%= f.text_field :location, placeholder: "都道府県から入力" %>
+    <%= f.label :address, "住所" %>
+    <%= f.text_field :address, placeholder: "都道府県から入力" %>
     </div><br>
 
 
