--- a/app/views/admins/hotels/show.html.erb
+++ b/app/views/admins/hotels/show.html.erb
@@ -8,12 +8,16 @@
 		<tr>
             <th>ホテル名</th>
 			<th>ホテル住所</th>
+			<th>latitude</th>
+			<th>longitude</th>
 		</tr>
 	</thead>
 	<tbody>
         <tr>
 			<td><%= @hotel.name %></td>
-			<td><%= @hotel.location %></td>
+			<td><%= @hotel.address %></td>
+			<td><%= @hotel.latitude %></td>
+			<td><%= @hotel.longitude %></td>
 		</tr>
 		<tr>
 			<% @hotel.hotel_photos.each do |hotel_photo| %>
@@ -60,13 +64,30 @@
 
     <div id="map"></div>
     <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
-        });
-      }
+    function initMap() {
+    var test ={lat: <%= @hotel.latitude %>, lng: <%= @hotel.longitude%>};
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 15,
+      center: test
+    });
+    var transitLayer = new google.maps.TransitLayer();
+    transitLayer.setMap(map);
+
+    var contentString = "住所：<%= @hotel.address %>";
+    var infowindow = new google.maps.InfoWindow({
+      content: contentString
+    });
+
+    var marker = new google.maps.Marker({
+      position:test,
+      map: map,
+      title: contentString
+    });
+
+    marker.addListener('click', function() {
+      infowindow.open(map, marker);
+    });
+    }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdT-i7-Yek3YigRSLkx62r8zkcRR71MFs&callback=initMap"
-    async defer></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwNc99Q2u5MzbjDkJp3kb1u2IH_-ofbBk&callback=initMap"
+    ></script>
