Add google map to admins/festivals#show

--- a/app/views/admins/festivals/edit.html.erb
+++ b/app/views/admins/festivals/edit.html.erb
@@ -33,8 +33,8 @@
 
     <%= f.label :detail, "説明" %>
     <%= f.text_area :detail, placeholder: "祭り説明" %>
-    <%= f.label :location, "会場住所" %>
-    <%= f.text_field :location, placeholder: "都道府県から入力" %>
+    <%= f.label :address, "会場住所" %>
+    <%= f.text_field :address, placeholder: "都道府県から入力" %>
 
     <br>
 
