--- a/app/views/users/festivals/show.html.erb
+++ b/app/views/users/festivals/show.html.erb
@@ -19,7 +19,7 @@
         <tr>
 			<td><%= @festival.name %></td>
 			<td><%= @festival.detail %></td>
-			<td><%= @festival.location %></td>
+			<td><%= @festival.address %></td>
 			<td><%= @festival.start_date %></td>
 			<td><%= @festival.end_date %></td>
 			<td><%= @festival.value_1 %></td>
