Give up users/hotels#index and Update it later

--- a/app/views/admins/hotels/index.html.erb
+++ b/app/views/admins/hotels/index.html.erb
@@ -20,7 +20,7 @@
         <tr>
         	<th><%= hotel.id %></th>
 			<td><a href="/admins/hotels/<%= hotel.id%>"><%= hotel.name %></td>
-			<td><%= hotel.location %></td>
+			<td><%= hotel.address %></td>
 			<td><%= hotel.hotel_photos.count %></td>
 			<td><%= hotel.room_types.count %></td>
 		</tr>
