--- a/app/views/admins/hotels/show.html.erb
+++ b/app/views/admins/hotels/show.html.erb
@@ -53,7 +53,7 @@
 	</tbody>
 </table>
 
-<!--下記、とりあえずGoogle Mapは表示できた、次は住所に応じて自動で表示されるようにしたい-->
+<!--下記、Google Map表示-->
 <h2>gmap</h2>
 <style>
 #map{
