--- a/app/views/users/festivals/index.html.erb
+++ b/app/views/users/festivals/index.html.erb
@@ -26,7 +26,7 @@
         <tr>
 			<td><a href="/users/festivals/<%= festival.id%>"><%= festival.name %></td>
 			<td><%= festival.detail %></td>
-			<td><%= festival.location %></td>
+			<td><%= festival.address %></td>
 			<td><%= festival.start_date %></td>
 			<td><%= festival.end_date %></td>
 			<td><%= festival.value_1 %></td>
