--- a/app/views/users/hotels/index.html.erb
+++ b/app/views/users/hotels/index.html.erb
@@ -1,2 +1,44 @@
-<h1>Users::Hotels#index</h1>
-<p>Find me in app/views/users/hotels/index.html.erb</p>
+<h1>"<%= @festival.name %>"付近のホテル一覧</h1>
+<p>会場: <%= @festival.address %></p>
+
+<!--下記、Google Map表示-->
+<h2>gmap</h2>
+latitude:<%= @festival.latitude %><br>
+longitude:<%= @festival.longitude %>
+<style>
+#map{
+  height: 400px;
+  width: 400px;
+}
+</style>
+
+    <div id="map"></div>
+    <script>
+    function initMap() {
+    var test ={lat: <%= @festival.latitude %>, lng: <%= @festival.longitude %>};
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 15,
+      center: test
+    });
+    var transitLayer = new google.maps.TransitLayer();
+    transitLayer.setMap(map);
+
+    var contentString = "住所：<%= @festival.address %>";
+    var infowindow = new google.maps.InfoWindow({
+      content: contentString
+    });
+
+    var marker = new google.maps.Marker({
+      position:test,
+      map: map,
+      title: contentString
+    });
+
+    marker.addListener('click', function() {
+      infowindow.open(map, marker);
+    });
+    }
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwNc99Q2u5MzbjDkJp3kb1u2IH_-ofbBk&callback=initMap"
+    ></script>
+
