--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,106 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+
+p {
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+
+body {
+	background-color: #120a33;
+}
+
+
+header {
+	width: 100%;
+	height: 100px;
+	line-height: 100px;
+	padding-right: 2%;
+	padding-left: 2%;
+}
+
+.header-logo {
+    width: 200px;
+    height: 80px;
+    float: left;
+  	background-size: 200px 80px;
+  	margin-top: 10px;
+}
+
+
+.header-nav {
+	float: right;
+
+}
+
+footer {
+	width: 100%;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
+}
+
+
+#slider {
+	width: 100%;
+	height: 400px;
+
+}
+
+#top-images {
+	background-size: cover;
+	background-position: center;
+}
+
+#top-search {
+	text-align: center;
+	margin: 50px auto 0 auto;
+	width: 60%;
+	background-color: white;
+	border-radius: 5px;
+	padding: 25px;
+	position: relative;
+}
+
+.search-text {
+	font-size: 30px;
+	margin-bottom: 20px;
+}
+
+input[type="date"] {
+    width: 160px;
+    height: 34px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 6px 12px;
+}
+
+/* 下記、日付検索欄のツールチップ */
+.tooltips {
+  position: absolute;
+  top: 3em;
+  left: 3em;
+  padding: 6px 12px;
+  color: #31708f;
+  background: #d9edf7;
+  border-radius: 0.5em;
+}
+
+.tooltips::after {
+  width: 100%;
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
+  border-bottom:15px solid transparent;
+  border-left:8px solid #d9edf7;
+}
+/* 以上、ツールチップ */
