--- a/app/views/users/festivals/about.html.erb
+++ b/app/views/users/festivals/about.html.erb
@@ -1,28 +1,56 @@
-<h1>About</h1>
-
-FesTiboは、祭りをもとにホテルを探せる検索サイトです。<br>
-<br>
-どこに旅をしようか。やっぱり東京、大阪、京都かな。<br>
-でもどれもみんなが行く場所、誰かが見た景色。<br>
-誰も見たことがない自分だけの日本を探したい。<br>
-<br>
-それなら祭りはいかがですか？<br>
-祭りは生き物、生身の人間たちが主役で、<br>
-そこでしかその瞬間でしか見れないあなただけの景色が見れます。<br>
-<br>
-日本各地に素晴らしいお祭りがあります。<br>
-しかしいざ調べるとなると祭り情報サイトやホテルサイトや地図など、<br>
-様々なものを同時に使わなければならず、なかなか足を運べませんよね。<br>
-<br>
-FesTiboはそのような煩わしさからあなたを解放し、<br>
-あなたしか見たことない日本を探すお手伝をします。<br>
-このサイトを作る際に旅中にTiboというフランス人に出会ったことを思い出し、<br>
-外国人でも使いやすいウェブサイト作りを意識しました。<br>
-そして私のようにこのサイトを通して、<br>
-誰かと出会うきっかけになればと願っております。<br>
-当サイトの由来であるFestivoは「祭り」や「祭日」という意味があります。<br>
-<br>
-さあ、あなただけの日本を探しに行きませんか？<br>
-何つってね、後でまた編集<br>
-<br>
-<%= link_to "TOPに戻る", root_path %>
+<div class="about-box">
+  <div class="about-headline">
+	<h1><p><strong>What's FesTibo ?</strong></p></h1>
+  </div>
+  <div class="about-content clearfix">
+  	<div class="about-content-left">
+  	  <p>
+  	    FesTiboは、祭りをもとにホテルを探せる検索サイトです。<br>
+        <br>
+        どこに旅をしようか。やっぱり東京、大阪、京都かな。<br>
+        でもどれもみんなが行く場所、そして既に誰かが見た景色。<br>
+        誰も見たことがない自分だけの日本を探したい。<br>
+        <br>
+        それなら祭りはいかがですか？<br>
+        祭りはまさに生き物、生身の人間たちが主役で、<br>
+        そこでしか、その瞬間でしか見れないあなただけの景色が見れます。<br>
+        <br>
+        日本各地に素晴らしいお祭りがあります。<br>
+        しかしいざ調べるとなると祭り情報サイトやホテルサイトや地図など、<br>
+        色んなツールを同時に使わなければならず、なかなか足を運べませんよね。<br>
+        <br>
+        FesTiboはそのような煩わしさからあなたを解放し、<br>
+        多種多様なFestivo=「祭り」へのアクセスをお手伝いします。<br>
+        そしてこのFesTiboを通して、<br>
+        あなたしか見ることができない日本に巡り合えればとても嬉しいです。<br>
+        <br>
+        さあ、あなただけの日本を見つけてください<br>
+        <br>
+        <br>
+      </p>
+      <strong>
+        <p style="text-decoration: underline solid gray;">
+          FesTiboの使い方
+        </p>
+        <p>
+          1. 日付・場所・ジャンルから祭りを検索(複数条件指定可)<br>
+          2. 祭りを選択して詳細をチェック<br>
+          3. 行きたい祭りが決まったら近くのホテルを検索<br>
+          4. ホテルを選択して詳細をチェック<br>
+          5. プランと宿泊日程を指定して予約<br>
+          6. 予約完了!!<br>
+          <br>
+          <br>
+        </p>
+      </strong>
+      <div style="text-align: center;">
+        <%= link_to root_path, data: {"turbolinks" => false}, class: "btn btn-success btn-s-md", style: "width: 30%;" do %>
+        <i class="fas fa-home" style="margin-right: 5px;"></i>TOPに戻る
+      <% end %>
+      </div>
+    </div>
+    <div class="about-content-right">
+      <%= image_tag ('anjyuomaturiIMG_1546_TP_V4.jpg'), style: "width: 90%;" %>
+    </div>
+  </div>
+</div>
