Finish layout of users#sign_in

--- a/app/views/users/festivals/about.html.erb
+++ b/app/views/users/festivals/about.html.erb
@@ -1,34 +1,34 @@
 <div class="about-box">
-  <div class="about-headline">
-	<h1><p><strong>What's FesTibo ?</strong></p></h1>
+  <div class="page-title">
+	<h1><p><b>What's FesTibo ?</b></p></h1>
   </div>
   <div class="about-content clearfix">
   	<div class="about-content-left">
   	  <p>
-  	    FesTiboは、祭りをもとにホテルを探せる検索サイトです。<br>
+  	    FesTiboは、祭りをもとにホテルを探せる検索サイトです<br>
         <br>
-        どこに旅をしようか。やっぱり東京、大阪、京都かな。<br>
-        でもどれもみんなが行く場所、そして既に誰かが見た景色。<br>
-        誰も見たことがない自分だけの日本を探したい。<br>
+        どこに旅をしようか。やっぱり東京、大阪、京都かな<br>
+        でもどれもみんなが行く場所、そして既に誰かが見た景色<br>
+        誰も見たことがない自分だけの日本を探したい<br>
         <br>
         それなら祭りはいかがですか？<br>
         祭りはまさに生き物、生身の人間たちが主役で、<br>
-        そこでしか、その瞬間でしか見れないあなただけの景色が見れます。<br>
+        そこでしか、その瞬間でしか見れないあなただけの景色が見れます<br>
         <br>
-        日本各地に素晴らしいお祭りがあります。<br>
+        日本各地に素晴らしいお祭りがあります<br>
         しかしいざ調べるとなると祭り情報サイトやホテルサイトや地図など、<br>
-        色んなツールを同時に使わなければならず、なかなか足を運べませんよね。<br>
+        色んなツールを同時に使わなければならず、なかなか足を運べませんよね<br>
         <br>
         FesTiboはそのような煩わしさからあなたを解放し、<br>
-        多種多様なFestivo=「祭り」へのアクセスをお手伝いします。<br>
+        多種多様なFestivo=「祭り」への旅をお手伝いします<br>
         そしてこのFesTiboを通して、<br>
-        あなたしか見ることができない日本に巡り合えればとても嬉しいです。<br>
+        あなたしか見ることができない日本に巡り合えればとても嬉しいです<br>
         <br>
         さあ、あなただけの日本を見つけてください<br>
         <br>
         <br>
       </p>
-      <strong>
+      <b>
         <p style="text-decoration: underline solid gray;">
           FesTiboの使い方
         </p>
@@ -42,7 +42,7 @@
           <br>
           <br>
         </p>
-      </strong>
+      </b>
       <div style="text-align: center;">
         <%= link_to root_path, data: {"turbolinks" => false}, class: "btn btn-success btn-s-md", style: "width: 30%;" do %>
         <i class="fas fa-home" style="margin-right: 5px;"></i>TOPに戻る
