--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -146,21 +146,21 @@ input[type="date"] {
 .about-box {
   background-color: white;
   width: 75%;
+  border-radius: 4px;
   margin: 0 auto;
   padding-top: 30px;
   padding-left: 50px;
   padding-right: 50px;
   padding-bottom: 50px;
-  border-radius: 4px;
 }
 
-.about-headline {
+.page-title {
   text-align: center;
-  margin-bottom: 50px;
   text-decoration: underline solid gray;
 }
 
 .about-content {
+  margin-top: 50px;
   margin-bottom: 50px;
 }
 
@@ -174,4 +174,39 @@ input[type="date"] {
   width: 50%;
   float: right;
   text-align: right;
+}
+
+.sign-background {
+  width: 100%;
+  height: 400px;
+  background-size: cover;
+  background-position: center;
+  margin-top: 10px;
+  padding-top: 25px;
+  background-image: image-url("AMEMAN314009_TP_V.jpg");
+}
+
+.sign-box {
+  background-color: white;
+  width: 25%;
+  border-radius: 4px;
+  margin: 0 auto;
+  padding: 30px 50px;
+}
+
+input[type="email"], input[type="password"] {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 6px 12px;
+  margin-bottom: 2px;
+}
+
+input[type="email"] {
+  margin-top: 30px;
+}
+
+.sign-action {
+  margin: 15px auto;
+  text-align: center;
 }
